Fix christian counselling overview section layout on mobile

--- a/style.css
+++ b/style.css
@@ -167,6 +167,10 @@ p {
 }
 
 @media screen and (max-width: 767px) {
+  .section-christian-counselling {
+  padding:0;
+}
+
   .counselling-container {
     flex-direction: column;
   }
